Added results chapter. Working on ROS chapter.

--- a/Arduino.tex
+++ b/Arduino.tex
@@ -144,9 +144,9 @@ Similar guards are used for the right encoder count variable.
 
 Because we are turning interrupts off briefly, there is the risk that we could miss an interrupt event on one of the channel A pins. Missing an edge pulse from one of the encoders would not only lose that tick, but would also throw off the next value we index into the lookup table. Luckily, the Arduino has a single-bit interrupt event flag for every interrupt event. Therefore in the worst case scenario, an encoder interrupt event occurs just after the ISR handler is detached, and that event is flagged. As long as the ISR is reattached and handles that flag before a second interrupt event occurs, there won't be a problem. After reattaching the ISR, the next program instruction is guaranteed to be executed before handling any flagged events. To ensure speedy handling of a flagged event, a meaningless assignment of zero is made to the local variable t.
 
-Let's calculate how often each interrupt event occurs. Each encoder generates 100 pulses per revolution. We will only be watching one of the square waves (output channel A), so that's 200 edge transitions per revolution. The motors are rated for 200 rpm, so at maximum speed the two encoders would revolve less than 3.4 times per second. So there will be at most \[3.4\ rev/sec * 200\ events/rev = 680\ events/sec\]
-Meaning we are guaranteed to have at least \(1 / 680 \approx 1.4\ ms\) between encoder interrupt events.
+Let's calculate how often each interrupt event occurs. Each encoder generates 100 pulses per revolution. We will only be watching one of the square waves (output channel A), so that's 200 edge transitions per revolution. The motors have a maximum speed of 200 RPM, so each encoder is guaranteed to revolve less than 3.4 times per second. Thus there will be at most \[3.4\ rev/sec * 200\ events/rev = 680\ events/sec\]
+And we are guaranteed to have at least \(1 / 680 \approx 1.4\ ms\) between encoder interrupt events.
 
-So the interrupt guards need to take significantly less than \(1.4\ ms\) in order to allow a flagged interrupt event to be handled before the next event occurs. Each global encoder count variable is four bytes, so assignment compiles to four machine instructions. The assignment of zero to the one-byte variable t takes one machine instruction. The helper macro digitalPinToInterrupt() is a preprocessor \#define, and so takes zero machine instructions. Therefore there are five total machine instructions executed before the ISR is executed. The Arduino Uno uses a 16 MHz quartz timing crystal, so executing one instruction takes \[1 / (16000000\ Hz) = 0.000000625\ seconds = 62.5\ nanoseconds\]
+So the interrupt guards need to take significantly less than \(1.4\ ms\) in order to allow a flagged interrupt event to be handled before the next event occurs. Each global encoder count variable is four bytes, so assignment compiles to four machine instructions. The assignment of zero to the one-byte variable t takes one machine instruction. The helper macro digitalPinToInterrupt() is a preprocessor \#define, and so takes zero machine instructions. Therefore there are five total machine instructions executed before the ISR is finished. The Uno uses a 16 MHz quartz timing crystal, so executing one instruction takes \[1 / (16000000\ Hz) = 62.5\ nanoseconds\]
 
 Thus to run the five instructions takes \(5 * 62.5\ ns = 0.3125\ \mu s\). Then the flagged event must be handled. External interrupt calling has an overhead of 5.125 \(\mu s\), to enter and leave the function \cite{gammonInterrupts}. Thus as long as the ISR executes in less than \(1.4\ ms - 0.0003125\ ms - 0.005125\ ms = 1.3945625\ ms\), the sketch will never miss an encoder event. Testing of the ISR indicates that this is an order of magnitude more time than needed.
