--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -1,6 +1,11 @@
 \section*{\centering{Acknowledgments}}
 
-This is the acknowledgements section.  You should replace this with your
-own acknowledgements.
+Gary Kalmanovich,
+
+David Gillman,
+
+Nikolas Wojtalewicz,
+
+
 
 \addcontentsline{toc}{section}{Acknowledgments}
