--- a/mainBib.bib
+++ b/mainBib.bib
@@ -14,6 +14,13 @@
   publisher = {Springer},
 }
 
+@ONLINE{ekfTut,
+  author       = "Gabriel A. Terejanu",
+  title        = "Extended Kalman Filter Tutorial",
+  organization = "University at Buffalo",
+  url          = {https://web.archive.org/web/20151224081427/https://homes.cs.washington.edu/~todorov/courses/cseP590/readings/tutorialEKF.pdf},
+}
+
 @MISC{dcMotorBlog,
    author = "Tom Igoe",
    title = "Controlling DC Motors",
@@ -121,6 +128,14 @@ url = {http://web.archive.org/web/20160324141917/http://www.robotshop.com/media/
    	url = "http://3.bp.blogspot.com/-9WVs1ImbheQ/U9w53Hm10FI/AAAAAAAAOv4/H313k8qFmnw/s1600/quadrature_half_res.png",
 }
 
+@MISC{fig_rpy,
+	author = "Katherine Ellis and Suneeta Godbole and Simon Marshall and Gert Lanckriet and John Staudenmayer and Jacqueline Kerr",
+   	title = "Average roll, pitch, and yaw angles",
+   	journal = "Frontiers in Public Health",
+	note = "[Online: accessed July 7, 2017]",
+   	url = "https://www.researchgate.net/publication/262055313_Identifying_Active_Travel_Behaviors_in_Challenging_Environments_Using_GPS_Accelerometers_and_Machine_Learning_Algorithms",
+}
+
 @MISC{fig_ros_control,
 	author = "Dave Coleman",
 	title = {ros\_control},
@@ -142,6 +157,12 @@ url = {http://web.archive.org/web/20160324141917/http://www.robotshop.com/media/
         organization = "Youtube",
         author = "drbrono",
         url = {https://youtu.be/QCNoVRgETRc},
+}
+
+@ONLINE{gps_visualizer,
+        title = "GPS Visualizer",
+        author = "Adam Schneider",
+        url = {http://web.archive.org/web/20170704153136/http://www.gpsvisualizer.com/},
 }
 
 
